<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="5">




    <TextView
        android:background="#ffff"
        android:textColor= "#000000"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/text_thang"
        android:textAlignment="center"
        android:textSize="35sp" />

    <ImageView
        android:background="@drawable/winwwwin"
        android:textColor= "#000000"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:text="@string/text_thang"
        android:textAlignment="center"
        android:textSize="35sp" />


    <Button
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:id="@+id/buttonMeNu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/custom_button1"
        android:text="@string/button_trangchu" />

    <Button
        android:id="@+id/buttonRateuu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:background="@drawable/custom_button"
        android:text="@string/button_namsao" />

    <Button
        android:id="@+id/AnotherQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.5"
        android:background="@drawable/custom_button1"
        android:text="@string/button_goicauhoikhac"
        android:textColor="#00ff4c"
        android:textSize="25sp"
        android:textStyle="bold" />


</LinearLayout>